# llm_bias_with_dt

./: .gitignore  LICENSE  README.md  main TEMP.py  main.py  pyproject.toml  pyprojet TEMP.toml  readme temp.md  requirements TEMP.txt  requirements.txt  run_attention_seeds.sh  run_decision_tree_seeds.sh  run_seeds.sh
data/cleaned/: agnews_filtered.csv  arxiv_filtered .csv  merged_datasets.csv  mnli_filtered.csv  snli_filtered.csv
logs/: bert_basic_features_logs.txt  bert_final_logs.txt  bert_statistical_features_logs.txt  bert_tokenization_logs.txt  decision_tree_debug_example.txt  decision_tree_reproductibility_pretrained_example.txt  decision_trees_rules_fusion_logs_example.txt  dt_aggregate_depth_pretrained_logs.txt  dt_aggregate_depth_untrained_logs.txt  dt_aggregate_patterns_pretrained_logs.txt  dt_aggregate_patterns_untrained_logs.txt  dt_extract_statistics_logs.txt  dt_missing_features_logs.txt  missing_features_comparison.txt  rejected_agnews.txt  rejected_arxiv.txt  rejected_mnli.txt  rejected_snli.txt  reproductibility_untrained_example_without_compare_seeds.txt  spacy_logs.txt
outputs/attention/: attention_top5_pretrained_sample.csv  attention_top5_untrained_seed_20279089_sample.csv  seeds_list.txt
outputs/bert/: bert_basic_features_sample.csv  bert_final_features_sample.csv  bert_statistical_features_sample.csv  bert_tokens_sample.csv  spacy_bert_merged_sample.csv
outputs/decision_tree/: layer_02_rules_simp_pos.txt  layer_04_rules_simp_pos.txt  layer_07_rules_simp_pos.txt  layer_10_rules_simp_pos.txt
outputs/dt_analysis/: dt_patterns_pretrained.csv  (+5 more)
(+4268 files in other folders)
