[project]
name = "llm_bias_with_dt"
version = "0.1.0"
description = "Exploring Biases in BERT through Attention Scores: A Decision Tree Approach"
authors = [
    { name="Zakaria JOUILIL", email="zakaria.jouilil@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
"auto_mix_prep",
"datasets",
"graphviz",
"numpy",
"pandas",
"scikit_learn",
"termcolor",
"torch",
"tqdm",
"transformers"
]

[project.urls]
Homepage = "https://github.com/fujitsu4/llm_bias_with_dt.git"
